@@ -1,3 +1,8 @@
+2008-11-05  Deepak Bhole  <dbhole@redhat.com>
+
+	* rt/net/sourceforge/jnlp/runtime/JNLPClassLoader.java: Correct
+	indentation from last commit, remove debug output.
+
 2008-11-05  Gary Benson  <gbenson@redhat.com>
 
 	* contrib/mixtec-hacks.patch: new file.
